# Amazon-A-generate

./: .gitattributes  .gitignore  README.md  pyproject.toml
backend/: .env.example  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260601_0001_initial_accounts_credits.py  20260601_0002_admin_credit_codes.py  20260618_0001_initial_mvp.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  generation_templates.py  mock_generation.py  mockup_recommendation.py  product_graph.py
backend/app/api/: deps.py  router.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  apply_sql.py  base.py  session.py
backend/app/memory/: __init__.py  service.py
backend/app/model_requests/: __init__.py  product.py
backend/app/models/: __init__.py  agent.py  conversation.py  file.py  generation.py  mixins.py  model_config.py  product.py  style_memory.py  tryon.py  user.py  vector.py
backend/app/schemas/: __init__.py  (+14 more)
backend/tests/: test_agent_graph.py  test_api_contract.py  test_api_health.py  test_auth_accounts.py  test_embedding.py  test_env_example.py  test_model_gateway.py  test_model_modules.py  test_package_exports.py
database/: 001_initial_mvp.sql  schema_table.sql
docker/: .env.example  backend.Dockerfile  docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile  nginx.conf
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
storage/: mockup_templates.json
(+140 files in other folders)
