[project]
name = "amazon-a-generate"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.43.32",
    "fastapi>=0.137.1",
    "langchain-core>=1.4.7",
    "langgraph>=1.2.5",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
filterwarnings = [
  "ignore:The .* attribute .* has no effect.*"
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]
